# EDA_project

./: README.md  import_data_scripts.py  main.py  main_unweighted.py  main_with_weight.py  pps_sample_csv.csv  pyproject.toml  statistic_function.py  test.py  weight_statistic_fuction.py
data/: aas_sample.csv  vvs_1_work_excel.xlsx
old/: merge_weight_file.py
