[tool.poetry]
name = "eda-project"
version = "0.1.0"
description = ""
authors = ["Eitan_Bluer <eitanbluer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
streamlit = "^1.41.1"
openpyxl = "^3.1.5"
setuptools = "^75.7.0"
numpy = "^2.2.1"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
